# Volcano

./: CMakeLists.txt  README.md  main.cpp
src/: volcano.cpp  volcano.hpp
src/shaders/: shader.frag  shader.vert
src/utils/: fileread.cpp  fileread.hpp
